# pastes

./: Cargo.toml  README.md  pastes.service
src/: help.txt  main.rs
