[package]
name = "pastes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.11.0", features = ["attributes"] }
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
rand = "0.8"
rusqlite = { version = "0.27", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.1"
tide = "0.16.0"
